# viewer-project

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/config/: session.py  settings.py
src/db/: db.py
src/db/model/: base_model.py
src/db/repository/: base_repository.py
src/module/client/: api.py  schema.py  service.py
src/module/coupons/: api.py  model.py  repository.py  schema.py
src/module/sessions/: api.py  model.py  repository.py  schema.py
src/module/wado/: api.py  service.py
viewer/: .htaccess  index.html  papaya.js  papayaWorker.js
viewer/assets/: 06024618.js  07d409cd.js  0f92dcbd.js  14d330bb.js  17e824f8.js  209f73da.js  4025ee9c.js  43d84808.js  466da4d5.js  4a763c3b.js  798f3ad1.js  9a8c2e2b.js  ConnectedOHIFDicomPDFViewer.0352fff5.css  DicomTagBrowser.0909b1ef.css  OHIFDicomHtmlViewport.fd348608.css  c95ba1a8.js  icomoon.74c072d0.eot  index.11ee38bc.css
