[tool.poetry]
name = "fastapi-viewer"
version = "0.1.0"
description = ""
authors = ["Phong Tran Duc <phtran.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
asyncpg = "^0.24.0"
uvicorn = "^0.20.0"
gunicorn = "20.1.0"
requests = "2.28.2"
httpx = "0.23.3"
SQLAlchemy = "^1.4.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
